lexical_syntax/syntax.output
Terminals unused in grammar

   END


语法

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error
    8       | Specifier ExtDecList error SEMI
    9       | Specifier error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag
   16                | STRUCT OptTag LC error RC

   17 OptTag: %empty
   18       | ID

   19 Tag: ID

   20 VarDec: ID
   21       | VarDec LB INT RB
   22       | VarDec LB INT error RB
   23       | VarDec LB error RB

   24 FunDec: ID LP VarList RP
   25       | ID LP RP
   26       | ID LP error RP

   27 VarList: ParamDec COMMA VarList
   28        | ParamDec

   29 ParamDec: Specifier VarDec

   30 CompSt: LC DefList StmtList RC
   31       | LC error
   32       | LC error RC

   33 StmtList: %empty
   34         | Stmt StmtList

   35 Stmt: Exp SEMI
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | WHILE LP Exp RP Stmt
   41     | Exp error
   42     | Exp error SEMI
   43     | Exp error COMMA
   44     | RETURN Exp error SEMI
   45     | RETURN error SEMI
   46     | Exp error RP SEMI
   47     | WHILE LP error RP Stmt
   48     | IF LP error RP Stmt
   49     | IF LP error RP Stmt ELSE Stmt

   50 DefList: %empty
   51        | Def DefList

   52 Def: Specifier DecList SEMI
   53    | Specifier DecList error SEMI
   54    | Specifier DecList error
   55    | Specifier VarDec ASSIGNOP Exp MINUS error SEMI

   56 DecList: Dec
   57        | Dec COMMA DecList

   58 Dec: VarDec
   59    | VarDec ASSIGNOP Exp

   60 Exp: Exp ASSIGNOP Exp
   61    | Exp AND Exp
   62    | Exp OR Exp
   63    | Exp RELOP Exp
   64    | Exp PLUS Exp
   65    | Exp MINUS Exp
   66    | Exp STAR Exp
   67    | Exp DIV Exp
   68    | LP Exp RP
   69    | MINUS Exp
   70    | NOT Exp
   71    | ID LP Args RP
   72    | ID LP RP
   73    | Exp LB Exp RB
   74    | Exp DOT ID
   75    | ID
   76    | INT
   77    | FLOAT
   78    | Exp LB Exp error RB
   79    | Exp LB error RB
   80    | ID LP error RP
   81    | ID LP Args error RP
   82    | ID LP Args error RB RP
   83    | ID LP Args error

   84 Args: Exp COMMA Args
   85     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 9 16 22 23 26 31 32 41 42 43 44 45 46 47 48 49 53 54
    55 78 79 80 81 82 83
INT (258) 21 22 76
FLOAT (259) 77
ID (260) 18 19 20 24 25 26 71 72 74 75 80 81 82 83
SEMI (261) 4 5 8 9 35 37 42 44 45 46 52 53 55
COMMA (262) 11 27 43 57 84
ASSIGNOP (263) 55 59 60
RELOP (264) 63
PLUS (265) 64
MINUS (266) 55 65 69
STAR (267) 66
DIV (268) 67
OR (269) 62
AND (270) 61
DOT (271) 74
NOT (272) 70
TYPE (273) 12
LP (274) 24 25 26 38 39 40 47 48 49 68 71 72 80 81 82 83
RP (275) 24 25 26 38 39 40 46 47 48 49 68 71 72 80 81 82
LB (276) 21 22 23 73 78 79
RB (277) 21 22 23 73 78 79 82
LC (278) 14 16 30 31 32
RC (279) 14 16 30 32
STRUCT (280) 14 15 16
RETURN (281) 37 44 45
IF (282) 38 39 48 49
ELSE (283) 39 49
WHILE (284) 40 47
END (285)
LOWER_THAN_RP (286)
LOWER_THAN_ELSE (287)
LOWER_THAN_SEMI (288)
LOWER_THAN_RC (289)


Nonterminals, with rules where they appear

$accept (35)
    左： 0
Program (36)
    左： 1, 右： 0
ExtDefList (37)
    左： 2 3, 右： 1 3
ExtDef (38)
    左： 4 5 6 7 8 9, 右： 3
ExtDecList (39)
    左： 10 11, 右： 4 8 11
Specifier (40)
    左： 12 13, 右： 4 5 6 7 8 9 29 52 53 54 55
StructSpecifier (41)
    左： 14 15 16, 右： 13
OptTag (42)
    左： 17 18, 右： 14 16
Tag (43)
    左： 19, 右： 15
VarDec (44)
    左： 20 21 22 23, 右： 10 11 21 22 23 29 55 58 59
FunDec (45)
    左： 24 25 26, 右： 6
VarList (46)
    左： 27 28, 右： 24 27
ParamDec (47)
    左： 29, 右： 27 28
CompSt (48)
    左： 30 31 32, 右： 6 36
StmtList (49)
    左： 33 34, 右： 30 34
Stmt (50)
    左： 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49, 右： 34
    38 39 40 47 48 49
DefList (51)
    左： 50 51, 右： 14 30 51
Def (52)
    左： 52 53 54 55, 右： 51
DecList (53)
    左： 56 57, 右： 52 53 54 57
Dec (54)
    左： 58 59, 右： 56 57
Exp (55)
    左： 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78
    79 80 81 82 83, 右： 35 37 38 39 40 41 42 43 44 46 55 59 60 61
    62 63 64 65 66 67 68 69 70 73 74 78 79 84 85
Args (56)
    左： 84 85, 右： 71 81 82 83 84


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          转到状态 3
    ExtDefList       转到状态 4
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag
   16                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  转到状态 9
    Tag     转到状态 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       转到状态 12
    ExtDef           转到状态 5
    Specifier        转到状态 6
    StructSpecifier  转到状态 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error
    8       | Specifier . ExtDecList error SEMI
    9       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  转到状态 16
    VarDec      转到状态 17
    FunDec      转到状态 18


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   18 OptTag: ID .
   19 Tag: ID .

    LC        reduce using rule 18 (OptTag)
    $default  reduce using rule 19 (Tag)


State 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC
   16                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 19


State 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  接受


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

    7 ExtDef: Specifier error .
    9       | Specifier error . SEMI

    SEMI  shift, and go to state 20

    $default  reduce using rule 7 (ExtDef)


State 14

   20 VarDec: ID .
   24 FunDec: ID . LP VarList RP
   25       | ID . LP RP
   26       | ID . LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 20 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    8       | Specifier ExtDecList . error SEMI

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error RB
   23       | VarDec . LB error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 10 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  转到状态 27


State 19

   14 StructSpecifier: STRUCT OptTag LC . DefList RC
   16                | STRUCT OptTag LC . error RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 50 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 30
    Def              转到状态 31


State 20

    9 ExtDef: Specifier error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 21

   24 FunDec: ID LP . VarList RP
   25       | ID LP . RP
   26       | ID LP . error RP

    error   shift, and go to state 32
    TYPE    shift, and go to state 1
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 2

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 35
    ParamDec         转到状态 36


State 22

    8 ExtDef: Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 37


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 38

    ExtDecList  转到状态 39
    VarDec      转到状态 17


State 25

   21 VarDec: VarDec LB . INT RB
   22       | VarDec LB . INT error RB
   23       | VarDec LB . error RB

    error  shift, and go to state 40
    INT    shift, and go to state 41


State 26

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error
   32       | LC . error RC

    error   shift, and go to state 42
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    INT     reduce using rule 50 (DefList)
    FLOAT   reduce using rule 50 (DefList)
    ID      reduce using rule 50 (DefList)
    MINUS   reduce using rule 50 (DefList)
    NOT     reduce using rule 50 (DefList)
    LP      reduce using rule 50 (DefList)
    LC      reduce using rule 50 (DefList)
    RC      reduce using rule 50 (DefList)
    RETURN  reduce using rule 50 (DefList)
    IF      reduce using rule 50 (DefList)
    WHILE   reduce using rule 50 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 43
    Def              转到状态 31


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   16 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 44


State 29

   52 Def: Specifier . DecList SEMI
   53    | Specifier . DecList error SEMI
   54    | Specifier . DecList error
   55    | Specifier . VarDec ASSIGNOP Exp MINUS error SEMI

    ID  shift, and go to state 38

    VarDec   转到状态 45
    DecList  转到状态 46
    Dec      转到状态 47


State 30

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 48


State 31

   51 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 50 (DefList)

    Specifier        转到状态 29
    StructSpecifier  转到状态 7
    DefList          转到状态 49
    Def              转到状态 31


State 32

   26 FunDec: ID LP error . RP

    RP  shift, and go to state 50


State 33

   25 FunDec: ID LP RP .

    $default  reduce using rule 25 (FunDec)


State 34

   29 ParamDec: Specifier . VarDec

    ID  shift, and go to state 38

    VarDec  转到状态 51


State 35

   24 FunDec: ID LP VarList . RP

    RP  shift, and go to state 52


State 36

   27 VarList: ParamDec . COMMA VarList
   28        | ParamDec .

    COMMA  shift, and go to state 53

    $default  reduce using rule 28 (VarList)


State 37

    8 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 38

   20 VarDec: ID .

    $default  reduce using rule 20 (VarDec)


State 39

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 40

   23 VarDec: VarDec LB error . RB

    RB  shift, and go to state 54


State 41

   21 VarDec: VarDec LB INT . RB
   22       | VarDec LB INT . error RB

    error  shift, and go to state 55
    RB     shift, and go to state 56


State 42

   31 CompSt: LC error .
   32       | LC error . RC

    RC  shift, and go to state 57

    $default  reduce using rule 31 (CompSt)


State 43

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 26
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    $default  reduce using rule 33 (StmtList)

    CompSt    转到状态 67
    StmtList  转到状态 68
    Stmt      转到状态 69
    Exp       转到状态 70


State 44

   16 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 16 (StructSpecifier)


State 45

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error RB
   23       | VarDec . LB error RB
   55 Def: Specifier VarDec . ASSIGNOP Exp MINUS error SEMI
   58 Dec: VarDec .
   59    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 71
    LB        shift, and go to state 25

    $default  reduce using rule 58 (Dec)


State 46

   52 Def: Specifier DecList . SEMI
   53    | Specifier DecList . error SEMI
   54    | Specifier DecList . error

    error  shift, and go to state 72
    SEMI   shift, and go to state 73


State 47

   56 DecList: Dec .
   57        | Dec . COMMA DecList

    COMMA  shift, and go to state 74

    $default  reduce using rule 56 (DecList)


State 48

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 49

   51 DefList: Def DefList .

    $default  reduce using rule 51 (DefList)


State 50

   26 FunDec: ID LP error RP .

    $default  reduce using rule 26 (FunDec)


State 51

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error RB
   23       | VarDec . LB error RB
   29 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 29 (ParamDec)


State 52

   24 FunDec: ID LP VarList RP .

    $default  reduce using rule 24 (FunDec)


State 53

   27 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        转到状态 34
    StructSpecifier  转到状态 7
    VarList          转到状态 75
    ParamDec         转到状态 36


State 54

   23 VarDec: VarDec LB error RB .

    $default  reduce using rule 23 (VarDec)


State 55

   22 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 76


State 56

   21 VarDec: VarDec LB INT RB .

    $default  reduce using rule 21 (VarDec)


State 57

   32 CompSt: LC error RC .

    $default  reduce using rule 32 (CompSt)


State 58

   76 Exp: INT .

    $default  reduce using rule 76 (Exp)


State 59

   77 Exp: FLOAT .

    $default  reduce using rule 77 (Exp)


State 60

   71 Exp: ID . LP Args RP
   72    | ID . LP RP
   75    | ID .
   80    | ID . LP error RP
   81    | ID . LP Args error RP
   82    | ID . LP Args error RB RP
   83    | ID . LP Args error

    LP  shift, and go to state 77

    $default  reduce using rule 75 (Exp)


State 61

   69 Exp: MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 78


State 62

   70 Exp: NOT . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 79


State 63

   68 Exp: LP . Exp RP

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 80


State 64

   37 Stmt: RETURN . Exp SEMI
   44     | RETURN . Exp error SEMI
   45     | RETURN . error SEMI

    error  shift, and go to state 81
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 82


State 65

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   48     | IF . LP error RP Stmt
   49     | IF . LP error RP Stmt ELSE Stmt

    LP  shift, and go to state 83


State 66

   40 Stmt: WHILE . LP Exp RP Stmt
   47     | WHILE . LP error RP Stmt

    LP  shift, and go to state 84


State 67

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 68

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 85


State 69

   34 StmtList: Stmt . StmtList

    INT     shift, and go to state 58
    FLOAT   shift, and go to state 59
    ID      shift, and go to state 60
    MINUS   shift, and go to state 61
    NOT     shift, and go to state 62
    LP      shift, and go to state 63
    LC      shift, and go to state 26
    RETURN  shift, and go to state 64
    IF      shift, and go to state 65
    WHILE   shift, and go to state 66

    $default  reduce using rule 33 (StmtList)

    CompSt    转到状态 67
    StmtList  转到状态 86
    Stmt      转到状态 69
    Exp       转到状态 70


State 70

   35 Stmt: Exp . SEMI
   41     | Exp . error
   42     | Exp . error SEMI
   43     | Exp . error COMMA
   46     | Exp . error RP SEMI
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    error     shift, and go to state 87
    SEMI      shift, and go to state 88
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 71

   55 Def: Specifier VarDec ASSIGNOP . Exp MINUS error SEMI
   59 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 99


State 72

   53 Def: Specifier DecList error . SEMI
   54    | Specifier DecList error .

    SEMI  shift, and go to state 100

    $default  reduce using rule 54 (Def)


State 73

   52 Def: Specifier DecList SEMI .

    $default  reduce using rule 52 (Def)


State 74

   57 DecList: Dec COMMA . DecList

    ID  shift, and go to state 38

    VarDec   转到状态 101
    DecList  转到状态 102
    Dec      转到状态 47


State 75

   27 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 76

   22 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 22 (VarDec)


State 77

   71 Exp: ID LP . Args RP
   72    | ID LP . RP
   80    | ID LP . error RP
   81    | ID LP . Args error RP
   82    | ID LP . Args error RB RP
   83    | ID LP . Args error

    error  shift, and go to state 103
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63
    RP     shift, and go to state 104

    Exp   转到状态 105
    Args  转到状态 106


State 78

   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   69    | MINUS Exp .
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    STAR  shift, and go to state 93
    DIV   shift, and go to state 94
    DOT   shift, and go to state 97
    LB    shift, and go to state 98

    $default  reduce using rule 69 (Exp)


State 79

   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   70    | NOT Exp .
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    DOT  shift, and go to state 97
    LB   shift, and go to state 98

    $default  reduce using rule 70 (Exp)


State 80

   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   68    | LP Exp . RP
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 107
    LB        shift, and go to state 98


State 81

   45 Stmt: RETURN error . SEMI

    SEMI  shift, and go to state 108


State 82

   37 Stmt: RETURN Exp . SEMI
   44     | RETURN Exp . error SEMI
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    error     shift, and go to state 109
    SEMI      shift, and go to state 110
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98


State 83

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt
   48     | IF LP . error RP Stmt
   49     | IF LP . error RP Stmt ELSE Stmt

    error  shift, and go to state 111
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 112


State 84

   40 Stmt: WHILE LP . Exp RP Stmt
   47     | WHILE LP . error RP Stmt

    error  shift, and go to state 113
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 114


State 85

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 86

   34 StmtList: Stmt StmtList .

    $default  reduce using rule 34 (StmtList)


State 87

   41 Stmt: Exp error .
   42     | Exp error . SEMI
   43     | Exp error . COMMA
   46     | Exp error . RP SEMI

    SEMI   shift, and go to state 115
    COMMA  shift, and go to state 116
    RP     shift, and go to state 117

    $default  reduce using rule 41 (Stmt)


State 88

   35 Stmt: Exp SEMI .

    $default  reduce using rule 35 (Stmt)


State 89

   60 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 118


State 90

   63 Exp: Exp RELOP . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 119


State 91

   64 Exp: Exp PLUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 120


State 92

   65 Exp: Exp MINUS . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 121


State 93

   66 Exp: Exp STAR . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 122


State 94

   67 Exp: Exp DIV . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 123


State 95

   62 Exp: Exp OR . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 124


State 96

   61 Exp: Exp AND . Exp

    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 125


State 97

   74 Exp: Exp DOT . ID

    ID  shift, and go to state 126


State 98

   73 Exp: Exp LB . Exp RB
   78    | Exp LB . Exp error RB
   79    | Exp LB . error RB

    error  shift, and go to state 127
    INT    shift, and go to state 58
    FLOAT  shift, and go to state 59
    ID     shift, and go to state 60
    MINUS  shift, and go to state 61
    NOT    shift, and go to state 62
    LP     shift, and go to state 63

    Exp  转到状态 128


State 99

   55 Def: Specifier VarDec ASSIGNOP Exp . MINUS error SEMI
   59 Dec: VarDec ASSIGNOP Exp .
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 129
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 59 (Dec)


State 100

   53 Def: Specifier DecList error SEMI .

    $default  reduce using rule 53 (Def)


State 101

   21 VarDec: VarDec . LB INT RB
   22       | VarDec . LB INT error RB
   23       | VarDec . LB error RB
   58 Dec: VarDec .
   59    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 130
    LB        shift, and go to state 25

    $default  reduce using rule 58 (Dec)


State 102

   57 DecList: Dec COMMA DecList .

    $default  reduce using rule 57 (DecList)


State 103

   80 Exp: ID LP error . RP

    RP  shift, and go to state 131


State 104

   72 Exp: ID LP RP .

    $default  reduce using rule 72 (Exp)


State 105

   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB
   84 Args: Exp . COMMA Args
   85     | Exp .

    COMMA     shift, and go to state 132
    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    LB        shift, and go to state 98

    $default  reduce using rule 85 (Args)


State 106

   71 Exp: ID LP Args . RP
   81    | ID LP Args . error RP
   82    | ID LP Args . error RB RP
   83    | ID LP Args . error

    error  shift, and go to state 133
    RP     shift, and go to state 134


State 107

   68 Exp: LP Exp RP .

    $default  reduce using rule 68 (Exp)


State 108

   45 Stmt: RETURN error SEMI .

    $default  reduce using rule 45 (Stmt)


State 109

   44 Stmt: RETURN Exp error . SEMI

    SEMI  shift, and go to state 135


State 110

   37 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 37 (Stmt)


State 111

   48 Stmt: IF LP error . RP Stmt
   49     | IF LP error . RP Stmt ELSE Stmt

    RP  shift, and go to state 136


State 112

   38 Stmt: IF LP Exp . RP Stmt
   39     | IF LP Exp . RP Stmt ELSE Stmt
   60 Exp: Exp . ASSIGNOP Exp
   61    | Exp . AND Exp
   62    | Exp . OR Exp
   63    | Exp . RELOP Exp
   64    | Exp . PLUS Exp
   65    | Exp . MINUS Exp
   66    | Exp . STAR Exp
   67    | Exp . DIV Exp
   73    | Exp . LB Exp RB
   74    | Exp . DOT ID
   78    | Exp . LB Exp error RB
   79    | Exp . LB error RB

    ASSIGNOP  shift, and go to state 89
    RELOP     shift, and go to state 90
    PLUS      shift, and go to state 91
    MINUS     shift, and go to state 92
    STAR      shift, and go to state 93
    DIV       shift, and go to state 94
    OR        shift, and go to state 95
    AND       shift, and go to state 96
    DOT       shift, and go to state 97
    RP        shift, and go to state 137
    LB        shift, and go to state 98


State 113

   47 Stmt: WHILE LP error . RP Stmt

    RP  shift, and go to state 138


State 114
